--- a/.github/workflows/generate-crd.yml
+++ b/.github/workflows/generate-crd.yml
@@ -19,6 +19,7 @@ env:
   IMAGE_NAME: ghcr.io/kubernetes-client/java/crd-model-gen
   IMAGE_TAG: v1.0.6
   GEN_DIR: crd-gen
+  SRC_DIR: ${{ github.workspace }}/crd-input/
 
 permissions:
   contents: read
@@ -34,6 +35,7 @@ jobs:
           read CRD_SRC_ARGS < <(echo '${{ github.event.inputs.crds }}' | perl -ne 'print join " ", map {"-u $_"} split /,/')
           test -z ${{ github.event.inputs.crdApiGroupPrefix }} || export CRD_API_GROUP_ARGS="-n ${{ github.event.inputs.crdApiGroupPrefix }}"
           echo "CRD Src Args: ${CRD_SRC_ARGS}"
+          cd ${SRC_DIR}
           echo "CRD Api Group Prefix Args: ${CRD_API_GROUP_ARGS}"
           mkdir -p ${GEN_DIR}
           docker run \
