--- a/.github/workflows/generate-crd.yml
+++ b/.github/workflows/generate-crd.yml
@@ -45,7 +45,7 @@ jobs:
             --network host \
             ${IMAGE_NAME}:${IMAGE_TAG} \
             /generate.sh \
-            ${CRD_SRC_ARGS} \
+            ${SRC_DIR}/${CRD_SRC_ARGS} \
             ${CRD_API_GROUP_ARGS} \
             -p ${{ github.event.inputs.generatingJavaPackage }} \
             -o "$(pwd)/${GEN_DIR}"
