--- a/.github/workflows/generate-crd.yml
+++ b/.github/workflows/generate-crd.yml
@@ -18,7 +18,7 @@ on:
 env:
   IMAGE_NAME: ghcr.io/kubernetes-client/java/crd-model-gen
   IMAGE_TAG: v1.0.6
-  GEN_DIR: crd-gen
+  GEN_DIR: ${{ github.workspace }}/crd-gen
   SRC_DIR: ${{ github.workspace }}/crd-input/
 
 permissions:
